// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActivationChecklist render 0/1 complete 1`] = `
<div
  className="activation-checklist list-group list-group-flush "
>
  <div
    data-reach-accordion=""
  >
    <div
      className="activation-checklist__container list-group-item "
      data-reach-accordion-item=""
      data-state="open"
    >
      <button
        aria-controls="panel--1---1"
        aria-expanded={true}
        className="activation-checklist__button list-group-item list-group-item-action"
        data-reach-accordion-button=""
        id="button--1---1"
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        <div
          className="activation-checklist-item d-flex justify-content-between"
        >
          <div
            className="d-flex align-items-center"
          >
            <span
              className="activation-checklist-item__icon-container icon-inline icon-down"
            >
              <svg
                className="mdi-icon activation-checklist-item__icon"
                fill="currentColor"
                height={24}
                viewBox="0 0 24 24"
                width={24}
              >
                <path
                  d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                />
              </svg>
            </span>
            <span
              className="activation-checklist-item__icon-container icon-inline icon-right"
            >
              <svg
                className="mdi-icon activation-checklist-item__icon"
                fill="currentColor"
                height={24}
                viewBox="0 0 24 24"
                width={24}
              >
                <path
                  d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z"
                />
              </svg>
            </span>
            <a
              className="activation-checklist__title"
              href=""
            >
              title1
            </a>
          </div>
          <div>
            <svg
              className="mdi-icon icon-inline text-muted"
              fill="currentColor"
              height={24}
              viewBox="0 0 24 24"
              width={24}
            >
              <path
                d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
              />
            </svg>
          </div>
        </div>
      </button>
      <div
        aria-labelledby="button--1---1"
        className="px-2"
        data-reach-accordion-panel=""
        data-state="open"
        hidden={false}
        id="panel--1---1"
        role="region"
        tabIndex={-1}
      >
        <div
          className="activation-checklist__detail pb-1"
        >
          detail1
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ActivationChecklist render 0/1 complete 2`] = `
<div
  className="activation-checklist list-group list-group-flush "
>
  <div
    data-reach-accordion=""
  >
    <div
      className="activation-checklist__container list-group-item "
      data-reach-accordion-item=""
      data-state="open"
    >
      <button
        aria-controls="panel--3---1"
        aria-expanded={true}
        className="activation-checklist__button list-group-item list-group-item-action"
        data-reach-accordion-button=""
        id="button--3---1"
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        <div
          className="activation-checklist-item d-flex justify-content-between"
        >
          <div
            className="d-flex align-items-center"
          >
            <span
              className="activation-checklist-item__icon-container icon-inline icon-down"
            >
              <svg
                className="mdi-icon activation-checklist-item__icon"
                fill="currentColor"
                height={24}
                viewBox="0 0 24 24"
                width={24}
              >
                <path
                  d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                />
              </svg>
            </span>
            <span
              className="activation-checklist-item__icon-container icon-inline icon-right"
            >
              <svg
                className="mdi-icon activation-checklist-item__icon"
                fill="currentColor"
                height={24}
                viewBox="0 0 24 24"
                width={24}
              >
                <path
                  d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z"
                />
              </svg>
            </span>
            <a
              className="activation-checklist__title"
              href=""
            >
              title1
            </a>
          </div>
          <div>
            <svg
              className="mdi-icon icon-inline text-muted"
              fill="currentColor"
              height={24}
              viewBox="0 0 24 24"
              width={24}
            >
              <path
                d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
              />
            </svg>
          </div>
        </div>
      </button>
      <div
        aria-labelledby="button--3---1"
        className="px-2"
        data-reach-accordion-panel=""
        data-state="open"
        hidden={false}
        id="panel--3---1"
        role="region"
        tabIndex={-1}
      >
        <div
          className="activation-checklist__detail pb-1"
        >
          detail1
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ActivationChecklist render 1/1 complete 1`] = `
<div
  className="activation-checklist list-group list-group-flush "
>
  <div
    data-reach-accordion=""
  >
    <div
      className="activation-checklist__container list-group-item "
      data-reach-accordion-item=""
      data-state="open"
    >
      <button
        aria-controls="panel--4---1"
        aria-expanded={true}
        className="activation-checklist__button list-group-item list-group-item-action"
        data-reach-accordion-button=""
        id="button--4---1"
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        <div
          className="activation-checklist-item d-flex justify-content-between"
        >
          <div
            className="d-flex align-items-center"
          >
            <span
              className="activation-checklist-item__icon-container icon-inline icon-down"
            >
              <svg
                className="mdi-icon activation-checklist-item__icon"
                fill="currentColor"
                height={24}
                viewBox="0 0 24 24"
                width={24}
              >
                <path
                  d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                />
              </svg>
            </span>
            <span
              className="activation-checklist-item__icon-container icon-inline icon-right"
            >
              <svg
                className="mdi-icon activation-checklist-item__icon"
                fill="currentColor"
                height={24}
                viewBox="0 0 24 24"
                width={24}
              >
                <path
                  d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z"
                />
              </svg>
            </span>
            <a
              className="activation-checklist__title"
              href=""
            >
              title1
            </a>
          </div>
          <div>
            <svg
              className="mdi-icon icon-inline text-success"
              fill="currentColor"
              height={24}
              viewBox="0 0 24 24"
              width={24}
            >
              <path
                d="M12 2C6.5 2 2 6.5 2 12S6.5 22 12 22 22 17.5 22 12 17.5 2 12 2M10 17L5 12L6.41 10.59L10 14.17L17.59 6.58L19 8L10 17Z"
              />
            </svg>
          </div>
        </div>
      </button>
      <div
        aria-labelledby="button--4---1"
        className="px-2"
        data-reach-accordion-panel=""
        data-state="open"
        hidden={false}
        id="panel--4---1"
        role="region"
        tabIndex={-1}
      >
        <div
          className="activation-checklist__detail pb-1"
        >
          detail1
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ActivationChecklist render loading 1`] = `
<div
  className="loading-spinner icon-inline my-2"
/>
`;
